--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 plugins {
-  id 'fabric-loom' version '0.5-SNAPSHOT'
+  id 'fabric-loom' version '0.8-SNAPSHOT'
   id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = project.mod_version + "+" + project.minecraft_version
 group = project.maven_group
 
 repositories {
   maven { url = "https://maven.nucleoid.xyz" }
   maven { url = "https://maven.gegy.dev/" }
   maven { url = "https://jitpack.io/" }
+  mavenLocal()
 }
 
 dependencies {
@@ -23,25 +24,17 @@ dependencies {
 
   modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-  modImplementation include('xyz.nucleoid:stimuli:0.1.0')
+  modImplementation include('xyz.nucleoid:stimuli:0.1.1+1.17')
 
-  modCompileOnly "dev.gegy:player-roles:1.3.1"
-
-  modRuntime("com.github.SuperCoder7979:databreaker:0.2.6") {
-    exclude module: "fabric-loader"
-  }
+  //modImplementation "dev.gegy:player-roles:1.4.1"
+  //modImplementation "dev.gegy:player-roles-api:1.4.1"
 }
 
 processResources {
   inputs.property "version", project.version
 
-  from(sourceSets.main.resources.srcDirs) {
-    include "fabric.mod.json"
+  filesMatching("fabric.mod.json") {
     expand "version": project.version
-  }
-
-  from(sourceSets.main.resources.srcDirs) {
-    exclude "fabric.mod.json"
   }
 }
 
